[package]
name = "numba-wumbo"       
version = "0.1.0"
edition = "2021"
authors = ["Anjal (@sudosuanjal)"]
description = "A goofy terminal game where you guess the secret number 🎮"
license = "MIT"
repository = "https://github.com/sudosuanjal/numba-wumbo"

[[bin]]
name = "numba-wumbo"      
path = "src/main.rs"

[dependencies]
colored = "3.0.0"
rand = "0.9.2"
