[package]
name = "numba-wumbo"       
version = "0.1.1"
edition = "2021"
authors = ["Anjal (@sudosuanjal)"]
homepage = "https://x.com/sudosuanjal"
description = "A goofy terminal game where you guess the secret number 🎮"
license = "MIT"
repository = "https://github.com/sudosuanjal/numba-wumbo"
readme = "README.md"

[[bin]]
name = "numba-wumbo"      
path = "src/main.rs"

[dependencies]
colored = "3.0.0"
rand = "0.9.2"
